--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\""
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "test": "node --test --import tsx test/utils/path-matching.test.ts"
   },
   "keywords": [
     "mcp",
@@ -24,6 +25,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.25.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "zod": "^3.22.4"
