--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "rulebook",
   "version": "0.1.0",
   "description": "An MCP server for managing and serving Markdown coding rules to AI agents",
-  "main": "dist/index.js",
+  "main": "dist/start-server.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts",
+    "start": "node dist/start-server.js",
+    "dev": "tsx watch src/start-server.ts",
     "type-check": "tsc --noEmit",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
